Test/git-issues/git-issue-859a.dfy.expect
git-issue-859a.dfy(28,2): Error: The Extract member might not be ghost unless the initial LHS is ghost
git-issue-859a.dfy(28,4): Error: The IsFailure member might not be ghost (type FailureCompatible used in :- statement)
git-issue-859a.dfy(28,4): Error: The PropagateFailure member might not be ghost (type FailureCompatible used in :- statement)
git-issue-859a.dfy(33,2): Error: The Extract member might not be ghost unless the initial LHS is ghost
git-issue-859a.dfy(44,9): Error: The IsFailure member might not be ghost (type FailureCompatible used in :- statement)
git-issue-859a.dfy(44,9): Error: The PropagateFailure member might not be ghost (type FailureCompatible used in :- statement)
6 resolution/type errors detected in git-issue-859a.dfy
